Change routing system